tests/snapshots/macro_test__at_playback_simple.snap
---
source: tests/macro_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 3:0
Lines: 4

Buffer:



[d]
