tests/snapshots/macro_test__at_with_count.snap
---
source: tests/macro_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 5

Buffer:


[c]
d
e
