tests/snapshots/macro_test__macro_at_eof.snap
---
source: tests/macro_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 2

Buffer:
a
[b]
