tests/snapshots/macro_test__macro_complex_insert.snap
---
source: tests/macro_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:31
Lines: 1

Buffer:
prefix_word_suffiprefix_x_suffi[x]
