tests/snapshots/macro_test__macro_uppercase_register.snap
---
source: tests/macro_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:7
Lines: 1

Buffer:
estxq@a[ ]
