tests/snapshots/macro_test__macro_yank_paste.snap
---
source: tests/macro_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 4:0
Lines: 5

Buffer:
copy
line 2
copy
line 3copy
[ ]
